--- a/javascript/study/study_22.09/web_site_img_text_case.html
+++ b/javascript/study/study_22.09/web_site_img_text_case.html
@@ -109,7 +109,7 @@
                                 <div class="script">
                                     <div class="t_code">
 <pre><code class="language-html">&lt;section id=imgTextType" class="imgText__wrap nexon section gray"&gt;
-    &lt;h2 class="blind"&gt;유용한 사이트 살퍄ㅕ보기 🎮&lt;/h2&gt;
+    &lt;h2 class="blind"&gt;유용한 사이트 살펴보기 🎮&lt;/h2&gt;
     &lt;div class="imgText__inner container"&gt;
         &lt;div class="imgText__txt"&gt;
             &lt;span&gt;이미지 텍스트 유형01&lt;/span&gt;
@@ -156,135 +156,207 @@
                                     <div class="t_code">
 <pre><code class="language-css">@import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
 
-.nexon {
-    font-family: 'NexonLv1Gothic';
-    font-weight: 400;
-}
+    .nexon {
+        font-family: 'NexonLv1Gothic';
+        font-weight: 400;
+    }
 
-/* Reset */
-* {
-    margin: 0;
-    padding: 0;
-}
+    /* Reset */
+    .blind{
+        position: absolute;
+        clip: rect(0, 0, 0, 0);
+        width: 1px;
+        height: 1px;
+        left: -1px;
+        top: -1px;
+    }
 
-a {
-    text-decoration: none;
-    color: #000;
-}
+    * {
+        margin: 0;
+        padding: 0;
+    }
 
-img {
-    width: 100%;
-}
+    a {
+        text-decoration: none;
+        color: #000;
+    }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: normal;
-}
+    img {
+        width: 100%;
+    }
 
-em, i, address{
-    font-style: normal;
-}
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-weight: normal;
+    }
 
-/* common(공통) */
-.container {
-    width: 1160px;
-    padding: 0 20px;
-    margin: 0 auto;
-}
+    /* common(공통) */
+    .container {
+        width: 1160px;
+        padding: 0 20px;
+        margin: 0 auto;
+    }
 
-.section {
-    padding: 120px 0;
-    /*위 아래 */
-}
+    .section {
+        padding: 120px 0;
+        /*위 아래 */
+    }
 
-.section>h2 {
-    /* ">" 이걸로 section 안에 있는 h2선택 */
-    font-size: 50px;
-    line-height: 1;
-    /* 1이라고 적으면 auto랑 똑같음 */
-    text-align: center;
-    margin-bottom: 20px;
-}
+    .section>h2 {
+        /* ">" 이걸로 section 안에 있는 h2선택 */
+        font-size: 50px;
+        line-height: 1;
+        /* 1이라고 적으면 auto랑 똑같음 */
+        text-align: center;
+        margin-bottom: 20px;
+    }
 
-.section>p {
-    font-size: 22px;
-    font-weight: 300;
-    color: #666;
-    text-align: center;
-    margin-bottom: 70px;
-}
+    .section>p {
+        font-size: 22px;
+        font-weight: 300;
+        color: #666;
+        text-align: center;
+        margin-bottom: 70px;
+    }
+    .gray{
+        background-color: #f5f5f5;
+    }
 
-.section>span {
-    display: block;
-    text-align: center;
-    font-size: 16px;
-    text-decoration: underline;
-    margin-bottom: 16px;
-}
+    /* cardType */
+    .card__inner {
+        display: flex;
+        /* 생성한 요소들을 flex로 정렬합니다. */
+        justify-content: space-between;
+        /*창 크기에 맞게 좌우로 정렬합니다 */
+        /*콘텐츠를 양쪽으로 정렬*/
+    }
+    li{
+        list-style: none;
+    }
 
-.mb70 {
-    margin-bottom: 70px !important;
-}
+    .card {
+        width: 32%;
+        background-color: #f5f5f5;
+    }
 
-/* headerType */
-.header__inner{
-    width: 100%;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    box-sizing: border-box;
-    border-bottom: 1px solid #ccc;
-}
+    .card__body {
+        padding: 24px;
+    }
 
-.header__logo{
-    width: 20%;
-    font-size: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
+    .card__body .tit {
+        font-size: 24px;
+        margin-bottom: 10px;
 
-.header__logo em{
-    font-size: 18px;
-    font-weight: 400;
-}
-.header__menu{
-    width: 60%;
-    text-align: center;
-}
-.header__menu li{
-    display: inline;
-}
-.header__menu li a{
-    padding: 13px 30px;
-    margin: 0 5px;
-    transition: background-color 0.3s;
-}
-.header__menu li a:hover{
-    background-color: #f1f1f1;
-    border-radius: 5px;
-}
-.header__member{
-    width: 20%;
-    text-align: right;
-}
-.header__member a{
-    font-size: 16px;
-    border: 1px solid #000;
-    padding: 10px 30px;
-    border-radius: 50px;
-    transition: all 0.25s;
-}
+        /* 한줄 효과 */
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        padding-right: 20px;
+    }
 
-.header__member a:hover{
-    background-color: #000;
-    color: #fff;
-}
+    .card__body .desc {
+        font-size: 18px;
+        line-height: 1.4;
+        color: #666;
+        margin-bottom: 20px;
+        font-weight: 300;
+
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 4; /*줄 효과*/
+        -webkit-box-orient: vertical;
+    }
+
+    .card__body .btn {}
+
+    /* imgTextType */
+    .imgText__inner{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .imgText__inner>div{
+        width: 32%;
+        height: 500px;
+    }
+    .imgText__txt{}
+    .imgText__txt span{
+        font-size: 16px;
+        color: #666;
+        text-decoration: underline;
+        text-underline-position: under;
+        margin-bottom: 20px;
+    }
+    .imgText__txt h3{
+        font-size: 50px;
+        font-weight: 300;
+        word-break: keep-all;
+        line-height: 1.4;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+    .imgText__txt p{
+        font-size: 18px;
+        font-weight: 300;
+        line-height: 1.5;
+        color: #666;
+        margin-bottom: 10px;
+    }
+    .imgText__txt ul{
+        font-size: 18px;
+        font-weight: 300;
+        line-height: 1.6;
+    }
+    .imgText__txt ul li{
+        position: relative;
+        padding-left: 20px;
+    }
+
+    .imgText__txt ul li a{
+        color: #666;
+    }
+
+    .imgText__txt ul li::before{
+        content: '';
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        position: absolute;
+        left: 5px;
+        top: 9px;
+        background: #666;
+    }
+
+    .imgText__img{
+        border-radius: 10px;
+        position: relative;
+    }
+
+    .imgText__img a{
+        position: absolute;
+        left: 30px;
+        bottom: 30px;
+        background-color: #7c2b39;
+        color: #fff;
+        font-size: 18px;
+        padding: 10px 30px;
+        border-radius: 30px;
+        display: inline-block;
+    }
+    .imgText__img a.blue{
+        background-color: #2b387c;
+    }
+    .imgText__img.img1{
+        background: url(img/imgText_bg01.jpg) no-repeat center / cover;
+    }
+    .imgText__img.img2{
+        background: url(img/imgText_bg02.jpg) no-repeat center / cover;
+    }
 </code></pre>
                                     </div>
                                 </div>
@@ -295,7 +367,7 @@ em, i, address{
                 </div>
                 <hr>
                 <h2 class="t_tit2">결과</h2>
-                <div class="t_iframe" style="min-height : 300px; padding-top:0;">
+                <div class="t_iframe" style="min-height : 1000px; padding-top:0;">
                     <iframe src="https://kimsangjunv1.github.io/coding/site/imgTextType/imgTextType01.html" frameborder="0"></iframe>
                 </div>
                 <hr>
