--- a/javascript/effect/sliderEffect01.html
+++ b/javascript/effect/sliderEffect01.html
@@ -162,7 +162,7 @@
                         </span>
                     </div>
                     <div class="cont">
-                        <div style="height: 100%">
+                        <div class="active" style="height: 100%">
 <pre><code style="font-family: 'NeoDunggeunmo" class="lauguage-js scroll">const sliderWrap = document.querySelector(".slider__wrap");
     const sliderImg = sliderWrap.querySelector(".slider__img");
     const slider = sliderWrap.querySelectorAll(".slider");
