--- a/javascript/effect/sliderEffect02.html
+++ b/javascript/effect/sliderEffect02.html
@@ -171,7 +171,7 @@
                         </span>
                     </div>
                     <div class="cont">
-                        <div style="height: 100%">
+                        <div class="active" style="height: 100%">
 <pre><code style="font-family: 'NeoDunggeunmo" class="lauguage-js scroll">const sliderInner = document.querySelector(".slider__inner");   //움직이는 영역
     const slider = document.querySelectorAll(".slider");            //이미지
 
