--- a/javascript/effect/sliderEffect03.html
+++ b/javascript/effect/sliderEffect03.html
@@ -175,7 +175,7 @@
                         </span>
                     </div>
                     <div class="cont">
-                        <div style="height: 100%">
+                        <div class="active" style="height: 100%">
 <pre><code style="font-family: 'NeoDunggeunmo" class="lauguage-js scroll">const sliderWrap = document.querySelector(".slider__wrap")
 const sliderImg = document.querySelector(".slider__img")        //보여지는 영역
 const sliderInner = document.querySelector(".slider__inner")    //움직이는 영역
