--- a/javascript/effect/dataEffect.html
+++ b/javascript/effect/dataEffect.html
@@ -23,9 +23,9 @@
         <div class="intro_menu">
             <ul>
                 <li style="text-align:center; font-size:40px; border-bottom: 1px solid rgba(255, 255, 255, 0.447); margin-bottom: 20px; padding-bottom: 20px;">데이터이펙트</li>
-                <li>01. 데이터 이펙트 : 1부터 100까지 출력하기 <a href="dataEffect01.html"></a></li>
-                <li>02. 데이터 이펙트 : 구구단 출력하기 <a href="dataEffect02.html"></a></li>
-                <li>03. 데이터 이펙트 : 1부터 100까지 출력하기 <a href="dataEffect03.html"></a></li>
+                <li>01. 데이터 이펙트 : 1부터 100까지 출력하기 <a href="dataEffect01.html">Go</a></li>
+                <li>02. 데이터 이펙트 : 구구단 출력하기 <a href="dataEffect02.html">GO</a></li>
+                <li>03. 데이터 이펙트 : 1부터 100까지 출력하기 <a href="dataEffect03.html">Go</a></li>
             </ul>
         </div>
     </main>
