--- a/javascript/effect/searchEffect.html
+++ b/javascript/effect/searchEffect.html
@@ -32,9 +32,9 @@
         <div class="intro_menu">
             <ul>
                 <li style="text-align:center; font-size:40px; border-bottom: 1px solid rgba(255, 255, 255, 0.447); margin-bottom: 20px; padding-bottom: 20px;">서치이펙트</li>
-                <li>01. 서치 이펙트 - include( / search() : 속성 검색<a href="quizEffect01.html"></a></li>
-                <li>02. 서치 이펙트 - indexOf() : 속성 검색<a href="quizEffect01.html"></a></li>
-                <li>03. 서치 이펙트 - charAt() : 첫 글자 검색 / <a href="quizEffect01.html"></a></li>
+                <li>01. 서치 이펙트 - include( / search() : 속성 검색<a href="quizEffect01.html">GO</a></li>
+                <li>02. 서치 이펙트 - indexOf() : 속성 검색<a href="quizEffect01.html">GO</a></li>
+                <li>03. 서치 이펙트 - charAt() : 첫 글자 검색 / <a href="quizEffect01.html">GO</a></li>
             </ul>
         </div>
     </main>
