--- a/javascript/index.html
+++ b/javascript/index.html
@@ -46,8 +46,9 @@
         /* 강아지 */
         .dog {
             position: absolute;
-            top: 200px;
-            left: 550px;
+            top: 50%;
+            left: 38%;
+            transform: translate(50%, 50%);
         }
 
         .dog .wrap {
