--- a/javascript/study/study_personal/web_darkmode.html
+++ b/javascript/study/study_personal/web_darkmode.html
@@ -114,7 +114,16 @@
                         prefers-color-scheme</a> by kimsangjunv1 (<a href="https://codepen.io/kimsangjunv1">@kimsangjunv1</a>)
                         on <a href="https://codepen.io">CodePen</a>.
                     </iframe>
-                    <img src="" alt="">
+                    <h2 class="t_tit2">TISTORY : 적용예시</h2>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_5.png" alt="">
+                    <hr>
+                    <h2 class="t_tit2">마치며</h2>
+                    <p class="t_box">
+                        전 처음에 버튼을 클릭하면 document.querySelectorAll 방법으로 .dark 클래스를 집어넣어 다크모드를 구현하고 있었는데<br>
+                        이 방법이 생각보다 설명이나 적용방법도 간편하기도 해서 한번 관심있는 분이 있을까 싶어 가져와봤습니다<br><br>
+                        굳이 꼭 다크모드라고 해서 어두운 색일 필요는 없으니 조금만 생각을 바꿔서 사용해본다면<br>
+                        나중에 포폴이라던지 기타등등 다른곳에 유용하게 쓰일거 같아 소개해봤읍니다 ^^
+                    </p>
                 </div>
                 
             </main>
