--- a/class/index.html
+++ b/class/index.html
@@ -240,11 +240,11 @@
                             <img src="https://jeonboyeon.github.io/coding2/assets/ico/icon.jpg" alt="전보연" title="전보연">
                         </a>
                     </div>
-                    <div class="col-xs-4 col-md-2">
+                    <!-- <div class="col-xs-4 col-md-2">
                         <a href="https://kimm99604.github.io/cording2/" target="_blank" class="thumbnail">
                             <img src="https://kimm99604.github.io/cording2/assets/ico/icon.jpg" alt="김미애" title="김미애">
                         </a>
-                    </div>
+                    </div> -->
                     <div class="col-xs-4 col-md-2">
                         <a href="https://younghwan12.github.io/coding3/" target="_blank" class="thumbnail">
                             <img src="https://younghwan12.github.io/coding3/assets/ico/icon.jpg" alt="이영환" title="이영환">
@@ -326,8 +326,8 @@
                         </a>
                     </div>
                     <div class="col-xs-4 col-md-2">
-                        <a href="https://hwangyoujin.github.io/coding2/index.html" target="_blank" class="thumbnail">
-                            <img src="https://hwangyoujin.github.io/coding2/assets/ico/icon.jpg" alt="황유진" title="황유진">
+                        <a href="https://youcodein.github.io/coding2/index.html" target="_blank" class="thumbnail">
+                            <img src="https://youcodein.github.io/coding2/assets/ico/icon.jpg" alt="황유진" title="황유진">
                         </a>
                     </div>
                     <div class="col-xs-4 col-md-2">
