--- a/index.html
+++ b/index.html
@@ -97,18 +97,13 @@
           </div>
           <div class="header_icon">
             <ul>
-              <li><a href="https://twitter.com/webstoryboy" target="_blank"><i class="fa fa-twitter"
-                    aria-hidden="true"></i><span>twitter</span></a></li>
-              <li><a href="https://codepen.io/webstoryboy/" target="_blank"><i class="fa fa-codepen"
+              <!-- <img style="width: 85px" src="assets/img/tistory-logo.svg" alt="portfolio"> -->
+              <li><a href="https://tistory.com/kimsangjunv1" target="_blank"><i class="fa fa-twitter"
+                    aria-hidden="true"></i><span>tistory</span></a></li>
+              <li><a href="https://codepen.io/kimsangjunv1/" target="_blank"><i class="fa fa-codepen"
                     aria-hidden="true"></i><span>codepen</span></a></li>
               <li><a href="https://github.com/kimsangjunv1" target="_blank"><i class="fa fa-github"
                     aria-hidden="true"></i><span>github</span></a></li>
-              <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i
-                    class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
-              <li><a href="https://dribbble.com/webstoryboy" target="_blank"><i class="fa fa-dribbble"
-                    aria-hidden="true"></i><span>dribbble</span></a></li>
-              <li><a href="https://www.instagram.com/webstoryboy/" target="_blank"><i class="fa fa-instagram"
-                    aria-hidden="true"></i><span>instagram</span></a></li>
             </ul>
           </div>
         </div>
@@ -134,6 +129,10 @@
           <ul class="filter option-set" data-filter-group="color">
             <li><a href="#filter-color-any" data-filter-value="" class="selected">ALL</a></li>
             <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">SCRIPT</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".layout">Layout</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".refer">REFERENCE</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".site">SITE</a></li>
           </ul>
         </div>
       </div>
@@ -184,7 +183,7 @@
           <!-- //box -->
 
           <!-- box -->
-          <section class="color-shape script">
+          <section class="color-shape refer">
             <a href="html/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
@@ -205,7 +204,7 @@
           <!-- //box -->
 
           <!-- box -->
-          <section class="color-shape script">
+          <section class="color-shape refer">
             <a href="css/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
@@ -226,7 +225,7 @@
           <!-- //box -->
 
           <!-- box -->
-          <section class="color-shape script">
+          <section class="color-shape layout">
             <a href="layout/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
@@ -247,7 +246,7 @@
           <!-- //box -->
 
           <!-- box -->
-          <section class="color-shape script">
+          <section class="color-shape site">
             <a href="site/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
@@ -256,11 +255,179 @@
                   <span class="overlay-text-thumb1-donut">사이트 제작하기</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SITE</h5>
                   <p>SITE</p>
                   <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape site">
+            <a href="site/site1/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE_01</span>
+                  <span class="overlay-text-thumb-donut">SITE_01</span>
+                  <span class="overlay-text-thumb1-donut">사이트 제작하기1</span>
+                  <span class="overlay-text-thumb2-donut">SITE_01</span>
+                </div>
+                <img src="assets/img/svg-grapes.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>SITE_01</h5>
+                  <p>SITE</p>
+                  <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape script">
+            <a href="javascript/effect/searchEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb-donut">Search</span>
+                  <span class="overlay-text-thumb1-donut">검색 효과</span>
+                  <span class="overlay-text-thumb2-donut">SCRIPT</span>
+                </div>
+                <img src="assets/img/svg-popcorn.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>Search</h5>
+                  <p>검색 효과</p>
+                  <span>JAVASCRIPT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape script">
+            <a href="javascript/effect/quizEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb-donut">Quiz</span>
+                  <span class="overlay-text-thumb1-donut">퀴즈 효과</span>
+                  <span class="overlay-text-thumb2-donut">SCRIPT</span>
+                </div>
+                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>Quiz</h5>
+                  <p>퀴즈 효과</p>
+                  <span>JAVASCRIPT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape script">
+            <a href="javascript/effect/sliderEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb-donut">Slide</span>
+                  <span class="overlay-text-thumb1-donut">슬라이드 효과</span>
+                  <span class="overlay-text-thumb2-donut">SCRIPT</span>
+                </div>
+                <img src="assets/img/svg-hotdog.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>Slide</h5>
+                  <p>슬라이드 효과</p>
+                  <span>JAVASCRIPT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape script">
+            <a href="javascript/effect/quizEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb-donut">Quiz</span>
+                  <span class="overlay-text-thumb1-donut">데이터 효과</span>
+                  <span class="overlay-text-thumb2-donut">SCRIPT</span>
+                </div>
+                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>Quiz</h5>
+                  <p>데이터 효과</p>
+                  <span>JAVASCRIPT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape script">
+            <a href="javascript/effect/mouseEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb-donut">Mouse</span>
+                  <span class="overlay-text-thumb1-donut">마우스 효과</span>
+                  <span class="overlay-text-thumb2-donut">SCRIPT</span>
+                </div>
+                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>Mouse</h5>
+                  <p>마우스 효과</p>
+                  <span>JAVASCRIPT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape script">
+            <a href="javascript/effect/parallaxEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb-donut">Parallax</span>
+                  <span class="overlay-text-thumb1-donut">패럴렉스 효과</span>
+                  <span class="overlay-text-thumb2-donut">SCRIPT</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>Parallax</h5>
+                  <p>패럴렉스 효과</p>
+                  <span>JAVASCRIPT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape script">
+            <a href="javascript/effect/gameEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb-donut">Game</span>
+                  <span class="overlay-text-thumb1-donut">게임 효과</span>
+                  <span class="overlay-text-thumb2-donut">SCRIPT</span>
+                </div>
+                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>Game</h5>
+                  <p>게임 효과</p>
+                  <span>JAVASCRIPT</span>
                 </div>
               </div>
             </a>
