--- a/javascript/effect/gameEffect.html
+++ b/javascript/effect/gameEffect.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>데이터 효과</title>
+
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <style>
+        body{
+            padding: 0;
+            box-sizing: border-box;
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+            background: radial-gradient(circle farthest-corner at center center, rgb(28, 22, 91), #5209b7)
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <div class="intro_menu">
+            <ul>
+                <li>01. 마우스 이펙트 : 1부터 100까지 출력하기 <a href="dataEffect03.html">Go</a></li>
+            </ul>
+        </div>
+    </main>
+    <script id="js-vertex-shader" type="x-shader/x-vertex">
+        u
+    </script>
 </body>
 </html>
