--- a/index.html
+++ b/index.html
@@ -56,10 +56,46 @@
   <![endif]-->
 
   <style>
-    #clock {display: block;}
-    .link1 {background: #fff; left: 50%; transform: translatex(-50%); color: #000; display: inline-block; border-radius: 5px; font-weight: bold; padding: 10px 30px!important; height: auto !important; box-sizing: border-box; width: auto !important; font-size: 20px !important; margin-top: 36px !important;}
-    .link2 {background: #fff; left: 50%; transform: translatex(-50%); color: #000; display: inline-block; border-radius: 5px; font-weight: bold; padding: 10px 30px!important; height: auto !important; box-sizing: border-box; width: auto !important; font-size: 20px !important; margin-top: 86px !important;}
-    .disqus {margin-right: 20px; margin-top: 40px;}
+    #clock {
+      display: block;
+    }
+
+    .link1 {
+      background: #fff;
+      left: 50%;
+      transform: translatex(-50%);
+      color: #000;
+      display: inline-block;
+      border-radius: 5px;
+      font-weight: bold;
+      padding: 10px 30px !important;
+      height: auto !important;
+      box-sizing: border-box;
+      width: auto !important;
+      font-size: 20px !important;
+      margin-top: 36px !important;
+    }
+
+    .link2 {
+      background: #fff;
+      left: 50%;
+      transform: translatex(-50%);
+      color: #000;
+      display: inline-block;
+      border-radius: 5px;
+      font-weight: bold;
+      padding: 10px 30px !important;
+      height: auto !important;
+      box-sizing: border-box;
+      width: auto !important;
+      font-size: 20px !important;
+      margin-top: 86px !important;
+    }
+
+    .disqus {
+      margin-right: 20px;
+      margin-top: 40px;
+    }
   </style>
 </head>
 
