--- a/javascript/effect/mouseEffect01.html
+++ b/javascript/effect/mouseEffect01.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>마우스 이펙트</title>
+
+    <link rel="stylesheet" href="../assets/css/mouse.css">
 </head>
 
 <body>
-    
+    <header id="header"></header>
 </body>
 
 </html>
