--- a/javascript/study/study_22.09/web_fix_prettier.html
+++ b/javascript/study/study_22.09/web_fix_prettier.html
@@ -96,23 +96,26 @@
                     <p class="t_desc2_css">
                         visual studio code의 extensions에 들어가 prettier를 검색 후 install이 완료되었는지 확인해봅니다.
                     </p>
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_6.png" alt="">
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_7.png" alt="">
                     <hr>
                     <h2 class="t_tit2">prettier 세팅 확인_01</h2>
                     <p class="t_desc2_css">
-                        MAC : 최 상단 메뉴바에서 code - preferences - Settings 클릭 후 'format on save' 검색 후 체크표시 확인
+                        MAC : 최 상단 메뉴바에서 code - preferences - Settings 클릭 후 'format on save' 검색 후 체크표시 확인<br><br>
                         Window : 왼쪽 하단 설정 아이콘 - Settings 클릭 후 'format on save' 검색 후 체크표시 확인
 
                         <i>단, 위와같은 방법을 했을때에도 안됐을시 파란색 박스의 'Edit in settings.json'을 클릭해줍니다.</i>
                     </p>
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_6.png" alt="">
-                    <h2 class="t_tit2">나타난 "settings.json"에서 "editor.formatOnSave": true, 부분이 'true'로 맞게 설정 되어있는지 확인 후 <br>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_8.png" alt="">
+                    <h2 class="t_tit2">prettier 세팅 확인_02</h2>
+                    <p class="t_desc2_css">나타난 "settings.json"에서 "editor.formatOnSave": true, 부분이 'true'로 맞게 설정 되어있는지 확인 후 <br>
                     만약 'false' 로 설정되어있을시 'true'로 설정해줍니다.
-                    </h2>
+                    </p>
+                    <h2>빨간색 박스의 경우 세팅 값</h2>
                     <p class="t_box">
                         "editor.formatOnSave": true,
                     </p>
-                    <h2 class="t_tit2">그럼에도 안되었다면 하단의 문구를 "settings.json" 파일 안에 사진과 같이 넣어서 확인해줍니다.</h2>
+                    <h2>파란색 박스의 경우 세팅 값</h2>
+                    <h2 class="t_desc2_css">그럼에도 안되었다면 하단의 문구를 "settings.json" 파일 안에 사진과 같이 넣어서 확인해줍니다.</h2>
                     <p class="t_box">
                         "editor.defaultFormatter": "esbenp.prettier-vscode",
                         "[typescriptreact]": {
@@ -122,7 +125,8 @@
                           "editor.defaultFormatter": "esbenp.prettier-vscode"
                         },
                     </p>
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_6.png" alt="">
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_9.png" alt="">
+                    <hr>
                     <h2 class="t_tit2">마치며</h2>
                     <p class="t_box">
                         이번 본문에 적혀있는 방법대로만 잘 따라오셨다면 문제없이 적용 되어있을거라 예상합니다 ^___^b<br>
