--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -72,14 +72,38 @@
                     <li><a href="#">01. 이벤트 메서드 : addEventListener("mousedown") : 마우스 버튼을 눌렀을 때</a></li>
                     <li><a href="#">01. 이벤트 메서드 : addEventListener("mouseup") : 마우스 버튼을 떼어내는 경우</a></li>
                     <li><a href="#">01. 이벤트 메서드 : addEventListener("mousemove") : 마우스 움직이는 경우</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("mouseenter") : 요소 위에 포인터 요소 위치가 있을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("mouseleave") : 요소 위에 포인터 요소 위치가 벗어 났을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("mouseover") : 요소 위에 포인터 요소의 위치가 있을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("mouseout") : 요소 위에 포인터 요소의 위치가 벗어 났을 때</a></li>
                     <br>
                     <li><a href="#">01. 이벤트 메서드 : addEventListener("drag") : 드래그 중인 경우</a></li>
-                    <li><a href="#">01. 이벤트 메서드 : addEventListener("dragstart") : 드래그 시작했을 경우</a></li>
-                    <li><a href="#">01. 이벤트 메서드 : addEventListener("dragend") : 드래그 끝났을 경우</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("dragstart") : 드래그 시작했을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("dragend") : 드래그 끝났을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("dragenter") : 요소의 위치에 드래그 했을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("dragover") : 요소의 위치 위에 있을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("dragleave") : 요소의 위치 위에서 벗어 났을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("drop") : 요소의 위치에 드롭 했을 때</a></li>
                     <br>
                     <li><a href="#">01. 이벤트 메서드 : addEventListener("keydown") : 키 눌렀을 때(한번만 실행)</a></li>
                     <li><a href="#">01. 이벤트 메서드 : addEventListener("keypress") : 키 눌렀을 때(누르고 있으면 계속 실행)</a></li>
                     <li><a href="#">01. 이벤트 메서드 : addEventListener("keyup") : 키 누르고 뗐을 때</a></li>
+                    <br>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("touchstart") : 터치가 시작 됐을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("touchmove") : 터치가 움직이고 있을 때</a></li>
+                    <li><a href="#">01. 이벤트 메서드 : addEventListener("touchend") : 터치가 끝났을 때</a></li>
+                    <br>
+                    <li><a href="#">01. 이벤트 속성 : clientX : X 좌표 값 : 브라우저 기준</a></li>
+                    <li><a href="#">01. 이벤트 속성 : clientY : Y 좌표 값 : 브라우저 기준</a></li>
+                    <li><a href="#">01. 이벤트 속성 : offsetX : X 좌표 값 : 요소 기준</a></li>
+                    <li><a href="#">01. 이벤트 속성 : offsetY : Y 좌표 값 : 요소 기준</a></li>
+                    <li><a href="#">01. 이벤트 속성 : pageX : X 좌표 값 : 페이지 기준</a></li>
+                    <li><a href="#">01. 이벤트 속성 : pageY : Y 좌표 값 : 페이지 기준</a></li>
+                    <li><a href="#">01. 이벤트 속성 : screenX : X 좌표 값 : 디바이스 기준</a></li>
+                    <li><a href="#">01. 이벤트 속성 : screenY : Y 좌표 값 : 디바이스 기준</a></li>
+                    <br>
+                    <li><a href="#">01. 이벤트 속성 : preventDefault() : 이벤트 작동 해지</a></li>
+                    <li><a href="#">01. 이벤트 속성 : dispatchDefault() : 이벤트 작동 해지</a></li>
                 </ul>
             </div>
         </div>
