--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="assets/css/text.css">    <!-- 공통 -->
     <link rel="stylesheet" href="assets/css/header.css">    <!-- 공통 -->
     <link rel="stylesheet" href="assets/css/imgText.css">    <!-- 공통 -->
+    <link rel="stylesheet" href="assets/css/banner.css">    <!-- 공통 -->
+    <link rel="stylesheet" href="assets/css/footer.css">    <!-- 공통 -->
 
 
 </head>
@@ -209,8 +211,16 @@
         </section> 
         <!-- //cardType -->
 
-        <section id="bannerType" class="banner__wrap">
-            <h2>배너 영역</h2>
+        <section id="bannerType" class="banner__wrap nexon">
+            <h2 class="blind">배너 영역</h2>
+            <div class="banner__inner">
+                <h3 class="title">유튜버 웹보이</h3>
+                <p class="desc">
+                    더 다양한 강의는 하단을 참조하세요
+                    <a href="" title="유튜브 페이지로 이동">www.naver.com</a>
+                </p>
+                <span class="small">배너 유형01</span>
+            </div>
         </section>
         <!-- //bannerType -->
 
@@ -256,8 +266,27 @@
     <!-- //mainType -->
 
     
-    <footer id="footerType">
-        <h2>푸터 영역</h2>
+    <footer id="footerType" class="footer__wrap nexon section gray">
+        <h2 class="blind">푸터 영역</h2>
+        <div class="footer__inner container">
+            <div class="footer__menu">
+                <div>
+                    <h3>사이트</h3>
+                    <ul>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                    </ul>
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
     </footer>
     <!-- //footerType -->
 </body>
